# agentic_poc

./: .gitignore  README.md  setup_flagembedding.sh
apps/agent-general/: pyproject.toml
apps/agent-general/app/: __init__.py  server.py  settings.py
apps/agent-rts/: .env  pyproject.toml
apps/agent-rts/app/: graph.py  server.py  settings.py
apps/agent-stk/: .env  pyproject.toml
apps/agent-stk/app/: graph.py  server.py  settings.py
apps/frontend/: .env  README.md  pyproject.toml  streamlit_app.py
apps/orchestrator/: .env  pyproject.toml
apps/orchestrator/app/: main.py
