[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-stk"
version = "0.1.0"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "pydantic-settings",
    "orjson",
    "langchain",
    "langgraph",
    "langchain-community",
    "langchain-ollama",
    "langchain-core",
    "pymilvus>=2.6.0",
]

# Note: FlagEmbedding should be installed separately or already available in the environment
# If disk quota is an issue, options:
# 1. Clean pip cache: pip cache purge
# 2. Install system-wide: pip install --no-cache-dir FlagEmbedding
# 3. Use existing installation if available
# 4. Fallback to Ollama-based embeddings (implemented in code)
